# dash-vibe

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  TESTING.md  app.py  justfile  pyproject.toml
.streamlit/: config.toml
components/: analyse.py  charts.py  history.py  leaders.py  map.py  theme.py
data/raw/: README.md
docs/tasks/: grunnkrets-drilldown.md
elhub/: aggregator.py  client.py  datasets.py  geo.py  labels.py  models.py
skills/: elhub.md
tests/: test_aggregator.py  test_charts.py  test_client.py  test_datasets.py  test_models.py
tests/e2e/: test_history_tab.py  test_kapasitet.py  test_leaders_tab.py  test_map_tab.py  test_volum.py
