[project]
name = "dash-vibe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.33",
    "httpx>=0.27",
    "pandas>=2.2",
    "folium>=0.16",
    "streamlit-folium>=0.20",
    "pydantic>=2.7",
    "plotly>=5.20",
    "branca>=0.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "playwright>=1.44",
    "pytest-playwright>=0.5",
]

[tool.setuptools.packages.find]
include = ["elhub*", "components*"]

[tool.ruff]
target-version = "py311"
line-length = 105

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations (typehints)
    "RUF",  # ruff-specific
]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
